fixed line-height issue for empty-response API call on mobile; force scroll for first mobile API call

--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,7 @@ a, a:visited {
 
   font-family: 'Roboto', 'Arial', 'sans-serif';
   font-size: 2em;
+  line-height: 1.1em;
   color: #aaa;
 }
 
